--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,7 +7,7 @@
         aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="collapsibleNavId">
+    <div class="collapse navbar-collapse" style="margin-top: -4px;" id="collapsibleNavId">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li *ngIf="is_admin!='ADMIN'" routerLinkActive="active" routerLink="/home" class="nav-item active">
                 <a  class="nav-link" href="/home"><b>Home</b></a>
