--- a/src/app/components/admin-home/admin-home.component.css
+++ b/src/app/components/admin-home/admin-home.component.css
@@ -138,6 +138,11 @@ table, th, td {
 }
 
 @media only screen and (max-width: 480px) {
+    #supp{
+        
+        width: 90%;
+       
+    }
     #filterInputIconeCancel, #filterInputIconeSearche{
         position: relative;
         transform: translate(-15px, -29px);
@@ -159,11 +164,6 @@ table, th, td {
         padding-bottom: 5px;
     }
 
-    #supp{
-        
-        width: 90%;
-       
-    }
     
 
     #delete{
@@ -190,4 +190,13 @@ table, th, td {
         flex: 0 0 13%;
     }
     
+}
+
+.backgroundBody{
+    position: fixed;
+    top: 0px;
+    z-index: 1;
+    height: 100%;
+    width: 100%;
+    background: #000000ad;
 }
