--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -43,6 +43,7 @@
     .logout{
       position: absolute;right: 0;
       margin-right: 8px;
+      margin-top: 20px;
     }
   
   }
@@ -66,6 +67,8 @@
     .logout{
       display: grid;
       place-content: end;
+      margin-bottom: -13px;
+      margin-right: 7px;
     }
   
   }
