--- a/src/app/components/produit/produit.component.html
+++ b/src/app/components/produit/produit.component.html
@@ -1,106 +1,108 @@
 <app-navbar *ngIf="idUser!=null && is_admin=='ADMIN'"></app-navbar>
 
-<div *ngIf="idUser!=null && is_admin=='ADMIN'" >
 
-    <div *ngIf="hideAdd" class="container py-4"> 
-        
-        <button type="button" style="width: 150px;" (click)="add()" data-toggle="modal" data-target="#exampleModal" class="btn btn-outline-primary">new</button>
-    </div>
-
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h2 *ngIf="addButton"  class="modal-title" id="exampleModalLabel">Ajouter Produit</h2>
-              <h2 *ngIf="!addButton"  class="modal-title" id="exampleModalLabel">Modifier Produit</h2>
-              <button type="button" style="border: 1px solid red;border-radius: 3px; background-color: red;"(click)="add()" class="close" data-dismiss="modal" aria-label="Close">
-                <span style="color: white;" aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-                <form [formGroup]="addProduit">
-                    <div class="col-md">
-                        <mat-form-field style="width: 100%;">
-                            <mat-select placeholder="Probleme"  [(ngModel)]="problemes" formControlName="Probleme" multiple>
-                                <mat-option>
-                                    <ngx-mat-select-search noEntriesFoundLabel="'Aucun Probleme'" placeholderLabel="Cherche" (keyup)="fProbleme($event)"></ngx-mat-select-search>
-                                </mat-option>
-                              <mat-option *ngFor="let item of probleme" [value]="item.id" >{{item.name}}</mat-option>
-                            </mat-select>
-                          </mat-form-field>
-                        <div class="form-group  py-2">
-                            <label for="produit">Produit</label>
-                            <input [(ngModel)]="produitSelected.name" (keyup)="chercher($event.target)" formControlName="produit" type="text" name="produit" class="form-control" >
-                            <small *ngIf="produit.invalid" id="fileHelpId" style="color: red;" class="form-text"> ** </small>
-                            <small *ngIf="deja" id="fileHelpId" style="color: red;" class="form-text"> * existe deja  </small>
-                        </div>
-                       
-                    </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" (click)="add()" data-dismiss="modal">Annuler</button>
-              <button *ngIf="addButton" class="btn btn-success" (click)="addNew()" [disabled]="addProduit.invalid " data-dismiss="modal" type="submit">Ajouter</button>
-              <button *ngIf="!addButton" class="btn btn-warning" (click)="modProduit(produitSelected)" [disabled]="addProduit.invalid" data-dismiss="modal" type="submit">Modifier</button>
-       
-            </div>
+<div *ngIf="!hideAdd" class="popup">
+  <button class="btnCancel" (click)="add()">X</button>
+  <br>
+  <div  class="popupHeader">
+      <h2 *ngIf="addButton"  >Ajouter Produit</h2>
+      <h2 *ngIf="!addButton"  >Modifier Produit</h2>
+  </div>
+  <hr>
+  <div class="popupBody">
+    <form [formGroup]="addProduit">
+      <div class="col-md">
+          <mat-form-field style="width: 100%;">
+              <mat-select placeholder="Probleme"  [(ngModel)]="problemes" formControlName="Probleme" multiple>
+                  <mat-option>
+                      <ngx-mat-select-search noEntriesFoundLabel="'Aucun Probleme'" placeholderLabel="Cherche" (keyup)="fProbleme($event)"></ngx-mat-select-search>
+                  </mat-option>
+                <mat-option *ngFor="let item of probleme" [value]="item.id" >{{item.name}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+          <div class="form-group  py-2">
+              <label for="produit">Produit</label>
+              <input [(ngModel)]="produitSelected.name" (keyup)="chercher($event.target)" formControlName="produit" type="text" name="produit" class="form-control" >
+              <small *ngIf="produit.invalid" id="fileHelpId" style="color: red;" class="form-text"> ** </small>
+              <small *ngIf="deja" id="fileHelpId" style="color: red;" class="form-text"> * existe deja  </small>
           </div>
-        </div>
+         
       </div>
-   
-<div *ngIf="!hideAdd" class="container mt-5">
-   
-    <hr>
+    </form>
+  </div>
+  <hr>
+  <div class="popupFouter">
+    <button type="button" style="margin-right: 10px" class="btn btn-secondary" (click)="add()" >Annuler</button>
+    <button *ngIf="addButton" class="btn btn-success " (click)="addNew()" [disabled]="addProduit.invalid " type="submit">Ajouter</button>
+    <button *ngIf="!addButton" class="btn btn-warning " (click)="modProduit(produitSelected)" [disabled]="addProduit.invalid" type="submit">Modifier</button>
+
+
+  
+  </div>
 </div>
 
+<div *ngIf="!hideAdd || Sup" class="backgroundBody">
 
-
-<div class="container">
-    <h1>Liste Produits</h1>
-        <input class="form-control" (keyup)="filter($event.target)" placeholder="Filter">
-    
 </div>
 
-<div class="container col-md-12  table-responsive">
-    
-    <br>
-    <mat-table class="tt" #table matSort [dataSource]="dataSource">
-
-        <!-- Position Column -->
-        <ng-container matColumnDef="num">
-        <mat-header-cell *matHeaderCellDef mat-sort-header> No </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.num}} </mat-cell>
-        </ng-container>
-
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-        <mat-header-cell *matHeaderCellDef mat-sort-header> Produit </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
-        </ng-container>
-        <ng-container matColumnDef="mod">
-            <mat-header-cell *matHeaderCellDef> Modifier </mat-header-cell>
-            <mat-cell *matCellDef="let element"> <button (click)="onMod(element)" data-toggle="modal" data-target="#exampleModal" class="btn btn-primary" >mod</button> </mat-cell>
-        </ng-container>
-        <ng-container matColumnDef="supp">
-            <mat-header-cell *matHeaderCellDef > Supprimer </mat-header-cell>
-            <mat-cell *matCellDef="let element"> <button (click)="onDelete(element.id)" class="btn btn-sm btn-danger" ><mat-icon>delete_forever</mat-icon></button> </mat-cell>
-        </ng-container>
-
-        
-
-        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-    </mat-table>
-    <mat-paginator #paginator
-    [pageSize]="15"
-    [showFirstLastButtons]="true">
-    </mat-paginator>
-
-    
-    
-    
-    
+<div *ngIf="Sup" id="supp">
+  <p><b>Confirmer la suppression !</b></p>
+  <button (click)="onDelete(idd)" class="btn btn-danger" style="width: 200px;">Supp</button><br>
+  <button (click)="hideDetail()" class="btn btn-warning" style="width: 200px;">Annuler</button>
 </div>
+<div *ngIf="idUser!=null && is_admin=='ADMIN'" [style]="style">
+
+  <div *ngIf="hideAdd" class="container py-4"> 
+      
+      <button type="button" style="width: 150px;" (click)="add()" data-toggle="modal" data-target="#exampleModal" class="btn btn-outline-primary">new</button>
+  </div>
+
+  <div class="container">
+      <h1>Liste Produits</h1>
+          <input class="form-control" (keyup)="filter($event.target)" placeholder="Filter">
+      
+  </div>
+
+  <div class="container col-md-12  table-responsive">
+      
+      <br>
+      <mat-table class="tt" #table matSort [dataSource]="dataSource">
+
+          <!-- Position Column -->
+          <ng-container matColumnDef="num">
+          <mat-header-cell *matHeaderCellDef mat-sort-header> No </mat-header-cell>
+          <mat-cell *matCellDef="let element"> {{element.num}} </mat-cell>
+          </ng-container>
+
+          <!-- Name Column -->
+          <ng-container matColumnDef="name">
+          <mat-header-cell *matHeaderCellDef mat-sort-header> Produit </mat-header-cell>
+          <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
+          </ng-container>
+          <ng-container matColumnDef="mod">
+              <mat-header-cell *matHeaderCellDef> Modifier </mat-header-cell>
+              <mat-cell *matCellDef="let element"> <button (click)="add();onMod(element)" class="btn btn-primary" >mod</button> </mat-cell>
+          </ng-container>
+          <ng-container matColumnDef="supp">
+              <mat-header-cell *matHeaderCellDef > Supprimer </mat-header-cell>
+              <mat-cell *matCellDef="let element"> <button (click)="toSupp(element.id)" class="btn btn-sm btn-danger" ><mat-icon>delete_forever</mat-icon></button> </mat-cell>
+          </ng-container>
+
+          
+
+          <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+          <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+      </mat-table>
+      <mat-paginator #paginator
+      [pageSize]="15"
+      [showFirstLastButtons]="true">
+      </mat-paginator>
+
+      
+      
+      
+      
+  </div>
 
 
 </div>
