--- a/src/app/components/reference/reference.component.html
+++ b/src/app/components/reference/reference.component.html
@@ -1,45 +1,58 @@
 <app-navbar *ngIf="idUser!=null && is_admin=='ADMIN'"></app-navbar>
 
-<div *ngIf="idUser!=null && is_admin=='ADMIN'" >
+<div *ngIf="!hideAdd" class="popup">
+  <button class="btnCancel" (click)="add()">X</button>
+  <br>
+  <div  class="popupHeader">
+      <h2 *ngIf="addButton"  >Ajouter composant</h2>
+      <h2 *ngIf="!addButton"  >Modifier composant</h2>
+      
+  </div>
+  <hr>
+  <div class="popupBody">
+    <form [formGroup]="addRef">
+      <div class="col-md ">
+          
+          <div class="form-group md-5 py-2">
+              <label for="ref">Composant </label>
+              <input [(ngModel)]="referenceSelected.name" (keyup)="chercher($event.target)" formControlName="ref" type="text" name="ref" class="form-control" >
+              <small *ngIf="ref.invalid" id="fileHelpId" style="color: red;" class="form-text"> ** </small>
+              <small *ngIf="deja" id="fileHelpId" style="color: red;" class="form-text"> * existe deja  </small>
+          </div>
+          
+      </div>
+    </form>
+      
+  </div>
+  <hr>
+  <div class="popupFouter">
+    <button type="button" style="margin-right: 10px" class="btn btn-secondary" (click)="add()" >Annuler</button>
+
+    <button type="button" *ngIf="addButton" (click)="addNew()" [disabled]="addRef.invalid " class="btn btn-success">Ajouter</button>
+    <button type="button" *ngIf="!addButton" class="btn btn-warning"  (click)="modRef(referenceSelected)" [disabled]="addRef.invalid">Modifier</button>
+  
+  
+  </div>
+</div>
+
+<div *ngIf="!hideAdd || Sup" class="backgroundBody">
+
+</div>
+
+<div *ngIf="Sup" id="supp">
+  <p><b>Confirmer la suppression !</b></p>
+  <button (click)="onDelete(idd)" class="btn btn-danger" style="width: 200px;">Supp</button><br>
+  <button (click)="hideDetail()" class="btn btn-warning" style="width: 200px;">Annuler</button>
+</div>
+
+<div *ngIf="idUser!=null && is_admin=='ADMIN'" [style]="style" >
 
     <div *ngIf="hideAdd" class="container py-4"> 
         
-        <button type="button" style="width: 150px;" (click)="add()" data-toggle="modal" data-target="#exampleModal" class="btn btn-outline-primary">new</button>
+        <button type="button" style="width: 150px;" (click)="add()"  class="btn btn-outline-primary">new</button>
     </div>
 
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h2 *ngIf="addButton"  class="modal-title" id="exampleModalLabel">Ajouter Composant</h2>
-              <h2 *ngIf="!addButton"  class="modal-title" id="exampleModalLabel">Modifier Composant</h2>
-              <button type="button" style="border: 1px solid red;border-radius: 3px; background-color: red;"(click)="add()" class="close" data-dismiss="modal" aria-label="Close">
-                <span style="color: white;" aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-                <form [formGroup]="addRef">
-                    <div class="col-md-6 ml-md-auto">
-                        
-                        <div class="form-group md-5 py-2">
-                            <label for="ref">Composant </label>
-                            <input [(ngModel)]="referenceSelected.name" (keyup)="chercher($event.target)" formControlName="ref" type="text" name="ref" class="form-control" >
-                            <small *ngIf="ref.invalid" id="fileHelpId" style="color: red;" class="form-text"> ** </small>
-                            <small *ngIf="deja" id="fileHelpId" style="color: red;" class="form-text"> * existe deja  </small>
-                        </div>
-                        
-                    </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" (click)="add()" data-dismiss="modal">Annuler</button>
-              
-              <button type="button" *ngIf="addButton"  (click)="addNew()" [disabled]="addRef.invalid " data-dismiss="modal"  class="btn btn-success">Ajouter</button>
-              <button type="button" *ngIf="!addButton" class="btn btn-warning" (click)="modRef(referenceSelected)" [disabled]="addRef.invalid" data-dismiss="modal">Modifier</button>
-            </div>
-          </div>
-        </div>
-      </div>
+    
    
 
 
@@ -69,11 +82,11 @@
         </ng-container>
         <ng-container matColumnDef="mod">
             <mat-header-cell *matHeaderCellDef> Modifier </mat-header-cell>
-            <mat-cell *matCellDef="let element"> <button *ngIf="element.id!=3" (click)="onMod(element)" data-toggle="modal" data-target="#exampleModal" class="btn btn-primary" >mod</button> </mat-cell>
+            <mat-cell *matCellDef="let element"> <button *ngIf="element.id!=3" (click)="add();onMod(element)" class="btn btn-primary" >mod</button> </mat-cell>
         </ng-container>
         <ng-container matColumnDef="supp">
             <mat-header-cell *matHeaderCellDef > Supprimer </mat-header-cell>
-            <mat-cell *matCellDef="let element"> <button *ngIf="element.id!=3" (click)="onDelete(element.id)" class="btn btn-sm btn-danger" ><mat-icon>delete_forever</mat-icon></button> </mat-cell>
+            <mat-cell *matCellDef="let element"> <button *ngIf="element.id!=3" (click)="toSupp(element.id)" class="btn btn-sm btn-danger" ><mat-icon>delete_forever</mat-icon></button> </mat-cell>
         </ng-container>
 
         
