--- a/src/app/components/solution/solution.component.html
+++ b/src/app/components/solution/solution.component.html
@@ -1,52 +1,17 @@
 <app-navbar *ngIf="idUser!=null && is_admin=='ADMIN'"></app-navbar>
-
-    <div *ngIf="idUser!=null && is_admin=='ADMIN'" >
-        
-        <div *ngIf="hideAdd" class="container py-4"> 
+    <div *ngIf="!hideAdd" class="popup">
+        <button class="btnCancel" (click)="add()">X</button>
+        <br>
+        <div  class="popupHeader">
+            <h2 *ngIf="addButton"  >Ajouter Solution</h2>
+            <h2 *ngIf="!addButton"  >Modifier Solution</h2>
             
-            <button type="button" data-toggle="modal" data-target="#exampleModal" style="width: 150px;" (click)="add()" class="btn btn-outline-primary">new</button>
         </div>
-
-      
-          
-          <!-- Modal -->
-          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h2 *ngIf="addButton"  class="modal-title" id="exampleModalLabel">Ajouter Solution</h2>
-                  <h2 *ngIf="!addButton"  class="modal-title" id="exampleModalLabel">Modifier Solution</h2>
-                  <button type="button" style="border: 1px solid red;border-radius: 3px; background-color: red;"(click)="add()" class="close" data-dismiss="modal" aria-label="Close">
-                    <span style="color: white;" aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body">
-                    <form [formGroup]="addSolution">
-                        <div class="col-md ml-md-auto">
-                            
-                            <div class="form-group py-2">
-                                <label for="sollution">Solution</label>
-                                <input [(ngModel)]="Solution.name" (keyup)="chercher($event.target)" formControlName="solution" type="text" name="solution" class="form-control">
-                                <small *ngIf="solution.invalid" id="fileHelpId" style="color: red;" class="form-text"> ** </small>
-                                <small *ngIf="deja" id="fileHelpId" style="color: red;" class="form-text"> * existe deja  </small>
-                            </div>
-                           
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" (click)="add()" data-dismiss="modal">Annuler</button>
-                  
-                  <button type="button" *ngIf="addButton"  (click)="addNew()" data-dismiss="modal" [disabled]="solution.invalid " class="btn btn-success">Ajouter</button>
-                  <button type="button" *ngIf="!addButton" class="btn btn-warning" (click)="modSolution(Solution)" data-dismiss="modal" [disabled]="solution.invalid">Modifier</button>
-                </div>
-              </div>
-            </div>
-          </div>
-       
-        <!-- <div *ngIf="!hideAdd"  class="container mt-5">
+        <hr>
+        <div class="popupBody">
+        
             <form [formGroup]="addSolution">
-                <div class="col-md-4 ml-md-auto">
+                <div class="col-md ml-md-auto">
                     
                     <div class="form-group py-2">
                         <label for="sollution">Solution</label>
@@ -54,24 +19,39 @@
                         <small *ngIf="solution.invalid" id="fileHelpId" style="color: red;" class="form-text"> ** </small>
                         <small *ngIf="deja" id="fileHelpId" style="color: red;" class="form-text"> * existe deja  </small>
                     </div>
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col">
-                                <button *ngIf="addButton" class="btn btn-success btn-block" (click)="addNew()" [disabled]="solution.invalid " type="submit">Ajouter</button>
-                                <button *ngIf="!addButton" class="btn btn-warning btn-block" (click)="modSolution(Solution)" [disabled]="solution.invalid" type="submit">Modifier</button>
-                            </div>
-                            <div class="col">
-                                <button class="btn btn-secondary btn-block" (click)="add()" type="submit">Annuler</button>
-                            </div>
-                        </div>
-                        
-                        
-                    </div> 
+                
                 </div>
             </form>
-            <hr>
+    
+        </div>
+        <hr>
+        <div class="popupFouter">
+        <button type="button" style="margin-right: 10px" class="btn btn-secondary" (click)="add()" >Annuler</button>
+
+        <button type="button" *ngIf="addButton"  (click)="addNew()"  [disabled]="solution.invalid " class="btn btn-success">Ajouter</button>
+        <button type="button" *ngIf="!addButton" class="btn btn-warning" (click)="modSolution(Solution)" [disabled]="solution.invalid">Modifier</button>
+        
+        
+        </div>
+    </div>
+
+    <div *ngIf="!hideAdd || Sup" class="backgroundBody">
+
+    </div>
+
+    <div *ngIf="Sup" id="supp">
+        <p><b>Confirmer la suppression !</b></p>
+        <button (click)="onDelete(idd)" class="btn btn-danger" style="width: 200px;">Supp</button><br>
+        <button (click)="hideDetail()" class="btn btn-warning" style="width: 200px;">Annuler</button>
+    </div>
+    <div *ngIf="idUser!=null && is_admin=='ADMIN'" [style]="style">
+        
+        <div *ngIf="hideAdd" class="container py-4"> 
             
-        </div> -->
+            <button type="button" data-toggle="modal" data-target="#exampleModal" style="width: 150px;" (click)="add()" class="btn btn-outline-primary">new</button>
+        </div>
+
+
         
         
         <div class="container">
@@ -99,11 +79,11 @@
                 </ng-container>
                 <ng-container matColumnDef="mod">
                     <mat-header-cell *matHeaderCellDef> Modifier </mat-header-cell>
-                    <mat-cell *matCellDef="let element"> <button *ngIf="element.id!=4" data-toggle="modal" data-target="#exampleModal" (click)="onMod(element)" class="btn btn-primary" >mod</button> </mat-cell>
+                    <mat-cell *matCellDef="let element"> <button *ngIf="element.id!=4" data-toggle="modal" data-target="#exampleModal" (click)="add();onMod(element)" class="btn btn-primary" >mod</button> </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="supp">
                     <mat-header-cell *matHeaderCellDef > Supprimer </mat-header-cell>
-                    <mat-cell *matCellDef="let element"> <button *ngIf="element.id!=4" (click)="onDelete(element.id)" class="btn btn-sm btn-danger" ><mat-icon>delete_forever</mat-icon></button> </mat-cell>
+                    <mat-cell *matCellDef="let element"> <button *ngIf="element.id!=4" (click)="toSupp(element.id)" class="btn btn-sm btn-danger" ><mat-icon>delete_forever</mat-icon></button> </mat-cell>
                 </ng-container>
         
                 
@@ -112,8 +92,8 @@
                 <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
             </mat-table>
             <mat-paginator #paginator
-            [pageSize]="15"
-            [showFirstLastButtons]="true">
+                [pageSize]="15"
+                [showFirstLastButtons]="true">
             </mat-paginator>
         
             
