--- a/src/app/components/todo/todo.component.css
+++ b/src/app/components/todo/todo.component.css
@@ -4,14 +4,15 @@
 
 .tt{
     width: 900px;
+    border: solid 1px black;
+    border-radius: 2px;
 }
 
 
 #delete{
     z-index: 1;
     position: fixed;
-    right: 50%;
-    left: 50%;
+    left: 63%;
     top: 30%;
     transform: translate(-50%,-50%);
     width: 30%;
@@ -34,12 +35,77 @@
     padding-bottom: 5px;
     
 }
-.detail button{
+
+.popup{
+    z-index: 1;
+    position: fixed;
+    right: 50%;
+    left: 50%;
+    top: 40%;
+    transform: translate(-50%,-50%);
+    border: 2px solid rgb(44, 41, 41);
+    border-radius: 5px;
+    background-color:rgb(253, 252, 250) ;
+    width: 500px;
+    max-width: 500px;
+    height: auto;
+    opacity: 1;
+    display: grid;
+}
+.detail button {
     border: 1px solid red;
     border-radius: 3px;
     background-color: red;
     position: absolute;
     right: 0;
+}
+
+.btnCancel{
+    border: 1px solid red;
+    border-radius: 3px;
+    background-color: red;
+    position: absolute;
+    right: 11px;
+    top: 20px;
+}
+
+
+.popupFouter{
+    width: auto;
+    text-align-last: end;
+    padding: 5px;
+    padding-right: 11px;
+}
+
+.popupHeader{
+    margin-bottom: -15px;
+    margin-left: 10px;
+}
+
+.popupBody{
+    width: 90%;
+}
+
+
+@media only screen and (max-width: 575px) {
+    .popup{
+        z-index: 1;
+        position: fixed;
+        right: 50%;
+        left: 50%;
+        top: 54%;
+        transform: translate(-50%,-50%);
+        border: 2px solid rgb(44, 41, 41);
+        border-radius: 5px;
+        background-color:rgb(253, 252, 250) ;
+        width: 90%;
+        max-width: 500px;
+        height: 90%;
+        opacity: 1;
+        display: grid;
+        overflow-y: auto;
+    }
+    
 }
 
 @media only screen and (max-width: 480px) {
@@ -56,6 +122,15 @@
         width: 300px;
         height: auto;
         padding-bottom: 5px;
+    }
+
+    #delete{
+        z-index: 1;
+        position: fixed;
+        left: 61%;
+        top: 310px;
+        transform: translate(-50%,-50%);
+        width: 30%;
     }
     
 }
